--- a/test/pom.xml
+++ b/test/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 	<groupId>org.obsproxygen</groupId>
 	<artifactId>org.obsproxygen-test</artifactId>
-    <version>1.0.0.0-SNAPSHOT</version>
+    <version>0.0.1.0-SNAPSHOT</version>
     
 	<properties>
 	   <org.freemarker.version>2.3.23</org.freemarker.version>
@@ -31,14 +31,12 @@
             <groupId>org.obsproxygen</groupId>
             <artifactId>org.obsproxygen-observable</artifactId>
             <version>${project.version}</version>
-
         </dependency>
 
-        <!-- Google compiler testing to test generated sources-->
-		<dependency>
-            <groupId>com.google.testing.compile</groupId>
-            <artifactId>compile-testing</artifactId>
-			<version>${com.google.testing.compile.version}</version>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.9</version>
             <scope>test</scope>
         </dependency>
 	</dependencies>
